--- a/ASSETS/CSS/styles.css
+++ b/ASSETS/CSS/styles.css
@@ -13,13 +13,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 50px;
+    padding: 15px 30px;
     background-color: #2c3e50;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar .logo img {
-    height: 70px;
+    height: 40px;
 }
 
 .nav-links {
@@ -270,6 +270,9 @@ body {
 .footer a:hover {
     text-decoration: none;
 }
+.footer p:last-child {
+    font-size: 0.6rem;
+}
 @media (max-width: 1160px) {
     .feature-list {
         font-size: 14px; /* Adjust font size for smaller screens */
@@ -278,12 +281,16 @@ body {
 
 @media (max-width: 768px) {
 	
-	.navbar .logo img {
-    height: 40px;
+/* Navbar */
+.navbar {
+    padding: 5px 30px;
 }
-	
-	.nav-links a {
-    font-size: 12px;
+.navbar .logo img {
+height: 25px;
+}
+
+.nav-links a {
+font-size: 12px;
 }
     .feature-list {
         font-size: 12px; /* Adjust font size further for even smaller screens */
@@ -323,7 +330,7 @@ body {
 @media (max-width: 480px) {
 	
 	.navbar .logo img {
-    height: 30px;
+    height: 20px;
 }
 	
 	
@@ -390,5 +397,8 @@ body {
 .footer p {
 	font-size: 0.6rem;
 	margin-top: 1rem;
+}
+.footer p:last-child {
+    font-size: 0.4rem;
 }
 }
