--- a/ASSETS/CSS/styles1.css
+++ b/ASSETS/CSS/styles1.css
@@ -12,13 +12,13 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 50px;
+    padding: 15px 40px;
     background-color: #2c3e50;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar .logo img {
-    height: 70px;
+    height: 40px;
 }
 
 .nav-links {
@@ -370,19 +370,27 @@ body.no-clicks > *:not(#coffee-overlay) {
 		
 /* Adjust sidebar width for mobile */
 @media (max-width: 767px) {
-   	.navbar .logo img {
-    height: 40px;
+/* Navbar */
+.navbar {
+    padding: 5px 30px;
 }
-	
-	.nav-links a {
-    font-size: 12px;
+.navbar .logo img {
+height: 25px;
+}
+
+.nav-links a {
+font-size: 12px;
 }
 }
 
 @media (max-width: 480px) {
 
-	.navbar .logo img {
-    height: 30px;
+/* Navbar */
+.navbar {
+    padding: 5px 30px;
+}
+.navbar .logo img {
+height: 20px;
 }
 .navbar {
     padding: 5px 20px;
