--- a/DISCLAIMER/ASSETS/CSS/styles.css
+++ b/DISCLAIMER/ASSETS/CSS/styles.css
@@ -13,13 +13,13 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 50px;
+    padding: 15px 40px;
     background-color: #2c3e50;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .navbar .logo img {
-    height: 70px;
+    height: 40px;
 }
 
 .nav-links {
@@ -121,10 +121,13 @@ html, body {
 .footer a:hover {
     text-decoration: none;
 }
+.footer p:last-child {
+    font-size: 0.6rem;
+}
 @media (max-width: 768px) {
 	
 	.navbar .logo img {
-    height: 40px;
+    height: 25px;
 }
 	
 	.nav-links a {
@@ -144,7 +147,7 @@ html, body {
 @media (max-width: 480px) {
 	
 	.navbar .logo img {
-    height: 30px;
+    height: 20px;
 }
 	
 	.navbar {
@@ -178,6 +181,8 @@ html, body {
 	font-size: 0.6rem;
 	margin-top: 1rem;
 }
-
+.footer p:last-child {
+    font-size: 0.4rem;
+}
 
 }
